--- a/src/pages/ja/articles/[...slug].astro
+++ b/src/pages/ja/articles/[...slug].astro
@@ -1,9 +1,9 @@
 ---
 import { getCollection } from 'astro:content';
-import ArticlePage from '../../components/ArticlePage.astro';
+import ArticlePage from '../../../components/ArticlePage.astro';
 
 export async function getStaticPaths() {
-  const articles = await getCollection('articles', ({ data }) => !data.draft);
+  const articles = await getCollection('articles_ja', ({ data }) => !data.draft);
   return articles.map((article) => ({
     params: { slug: article.id.replace(/\.md$/, '') },
     props: { article },
@@ -12,4 +12,4 @@ export async function getStaticPaths() {
 
 const { article } = Astro.props;
 ---
-<ArticlePage article={article} lang="zh-Hant" />
+<ArticlePage article={article} lang="ja" />
